# industry-egnn-qm9

./: .gitignore  README.md  pyproject.toml
data/processed/: qm9_energy_split.json
docs/: metrics.json
src/: train.py
src/egnn_qm9/: __init__.py  config.py  data.py  model.py  pipeline.py  plotting.py  training.py
