[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egnn-qm9"
version = "0.1.0"
description = "Modular QM9 force-learning pipeline with PySCF labels and an equivariant message passing model."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "e3nn>=0.6.0",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyscf>=2.5",
  "pyyaml>=6.0",
  "seaborn>=0.13",
  "tensorboard>=2.16",
  "torch>=2.4",
  "torch-geometric>=2.5",
]

[project.scripts]
egnn-qm9 = "egnn_qm9.pipeline:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
